// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/app/demo/Modal.tsx correctly 1`] = `
<div
  class=""
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`renders ./components/app/demo/message.tsx correctly 1`] = `
<div
  class=""
>
  <div>
    Hello World
  </div>
</div>
`;

exports[`renders ./components/app/demo/myApp.tsx correctly 1`] = `
<div
  class=""
>
  <div>
    Hello World
  </div>
</div>
`;

exports[`renders ./components/app/demo/notification.tsx correctly 1`] = `
<div
  class=""
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open Notification
    </span>
  </button>
</div>
`;
